--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "path": "^0.12.7",
@@ -26,8 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "prod:new": "npm run build && NODE_ENV=prod pm2 start ./production.js --name shopee-test",
-    "prod": "npm run build && NODE_ENV=prod pm2 start shopee-test"
+    "prod:new": "pm2 start ./production.js --name shopee-test",
+    "prod": "pm2 start shopee-test"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
